include/maplibre_native_c/style.h


typedef enum mln_style_source_type : uint32_t {
  MLN_STYLE_SOURCE_TYPE_UNKNOWN = 0,
  MLN_STYLE_SOURCE_TYPE_VECTOR = 1,
  MLN_STYLE_SOURCE_TYPE_RASTER = 2,
  MLN_STYLE_SOURCE_TYPE_RASTER_DEM = 3,
  MLN_STYLE_SOURCE_TYPE_GEOJSON = 4,
  MLN_STYLE_SOURCE_TYPE_IMAGE = 5,
  MLN_STYLE_SOURCE_TYPE_VIDEO = 6,
  MLN_STYLE_SOURCE_TYPE_ANNOTATIONS = 7,
  MLN_STYLE_SOURCE_TYPE_CUSTOM_VECTOR = 8,
  MLN_STYLE_SOURCE_TYPE_CUSTOM_MVT_VECTOR = 9,
} mln_style_source_type;
typedef enum mln_style_tile_source_option_field : uint32_t {
  MLN_STYLE_TILE_SOURCE_OPTION_MIN_ZOOM = 1U << 0U,
  MLN_STYLE_TILE_SOURCE_OPTION_MAX_ZOOM = 1U << 1U,
  MLN_STYLE_TILE_SOURCE_OPTION_ATTRIBUTION = 1U << 2U,
  MLN_STYLE_TILE_SOURCE_OPTION_SCHEME = 1U << 3U,
  MLN_STYLE_TILE_SOURCE_OPTION_BOUNDS = 1U << 4U,
  MLN_STYLE_TILE_SOURCE_OPTION_TILE_SIZE = 1U << 5U,
  MLN_STYLE_TILE_SOURCE_OPTION_VECTOR_ENCODING = 1U << 6U,
  MLN_STYLE_TILE_SOURCE_OPTION_RASTER_ENCODING = 1U << 7U,
} mln_style_tile_source_option_field;
typedef enum mln_style_tile_scheme : uint32_t {
  MLN_STYLE_TILE_SCHEME_XYZ = 0,
  MLN_STYLE_TILE_SCHEME_TMS = 1,
} mln_style_tile_scheme;
typedef enum mln_style_vector_tile_encoding : uint32_t {
  MLN_STYLE_VECTOR_TILE_ENCODING_MVT = 0,
  MLN_STYLE_VECTOR_TILE_ENCODING_MLT = 1,
} mln_style_vector_tile_encoding;
typedef enum mln_style_raster_dem_encoding : uint32_t {
  MLN_STYLE_RASTER_DEM_ENCODING_MAPBOX = 0,
  MLN_STYLE_RASTER_DEM_ENCODING_TERRARIUM = 1,
} mln_style_raster_dem_encoding;
typedef struct mln_image_stretch {
  float from;
  float to;
} mln_image_stretch;
typedef struct mln_image_content {
  float left;
  float top;
  float right;
  float bottom;
} mln_image_content;
typedef enum mln_style_image_text_fit : uint32_t {
  MLN_STYLE_IMAGE_TEXT_FIT_STRETCH_OR_SHRINK = 0,
  MLN_STYLE_IMAGE_TEXT_FIT_STRETCH_ONLY = 1,
  MLN_STYLE_IMAGE_TEXT_FIT_PROPORTIONAL = 2,
} mln_style_image_text_fit;
typedef enum mln_style_layer_visibility : uint32_t {
  MLN_STYLE_LAYER_VISIBILITY_VISIBLE = 0,
  MLN_STYLE_LAYER_VISIBILITY_NONE = 1,
} mln_style_layer_visibility;
typedef enum mln_geojson_source_option_field : uint32_t {
  MLN_GEOJSON_SOURCE_OPTION_MIN_ZOOM = 1U << 0U,
  MLN_GEOJSON_SOURCE_OPTION_MAX_ZOOM = 1U << 1U,
  MLN_GEOJSON_SOURCE_OPTION_TOLERANCE = 1U << 2U,
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER_MAX_ZOOM = 1U << 3U,
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER_PROPERTIES = 1U << 4U,
  MLN_GEOJSON_SOURCE_OPTION_TILE_SIZE = 1U << 5U,
  MLN_GEOJSON_SOURCE_OPTION_BUFFER = 1U << 6U,
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER_RADIUS = 1U << 7U,
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER_MIN_POINTS = 1U << 8U,
  MLN_GEOJSON_SOURCE_OPTION_LINE_METRICS = 1U << 9U,
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER = 1U << 10U,
  MLN_GEOJSON_SOURCE_OPTION_SYNCHRONOUS_TILING = 1U << 11U,
} mln_geojson_source_option_field;
typedef enum mln_custom_geometry_source_option_field : uint32_t {
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_MIN_ZOOM = 1U << 0U,
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_MAX_ZOOM = 1U << 1U,
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_TOLERANCE = 1U << 2U,
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_TILE_SIZE = 1U << 3U,
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_BUFFER = 1U << 4U,
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_CLIP = 1U << 5U,
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_WRAP = 1U << 6U,
} mln_custom_geometry_source_option_field;
typedef enum mln_style_image_option_field : uint32_t {
  MLN_STYLE_IMAGE_OPTION_PIXEL_RATIO = 1U << 0U,
  MLN_STYLE_IMAGE_OPTION_SDF = 1U << 1U,
  MLN_STYLE_IMAGE_OPTION_STRETCH_X = 1U << 2U,
  MLN_STYLE_IMAGE_OPTION_STRETCH_Y = 1U << 3U,
  MLN_STYLE_IMAGE_OPTION_CONTENT = 1U << 4U,
  MLN_STYLE_IMAGE_OPTION_TEXT_FIT_WIDTH = 1U << 5U,
  MLN_STYLE_IMAGE_OPTION_TEXT_FIT_HEIGHT = 1U << 6U,
} mln_style_image_option_field;
typedef enum mln_style_transition_option_field : uint32_t {
  MLN_STYLE_TRANSITION_OPTION_DURATION = 1U << 0U,
  MLN_STYLE_TRANSITION_OPTION_DELAY = 1U << 1U,
  MLN_STYLE_TRANSITION_OPTION_ENABLE_PLACEMENT_TRANSITIONS = 1U << 2U,
} mln_style_transition_option_field;
typedef enum mln_location_indicator_image_kind : uint32_t {
  MLN_LOCATION_INDICATOR_IMAGE_KIND_TOP = 0,
  MLN_LOCATION_INDICATOR_IMAGE_KIND_BEARING = 1,
  MLN_LOCATION_INDICATOR_IMAGE_KIND_SHADOW = 2,
} mln_location_indicator_image_kind;
typedef struct mln_style_source_info {
  uint32_t size;
  uint32_t type;
  uint32_t fields;
  size_t id_size;
  bool is_volatile;
  bool has_attribution;
  size_t attribution_size;
  size_t url_size;
  size_t tile_count;
  double min_zoom;
  double max_zoom;
  uint32_t scheme;
  mln_lat_lng_bounds bounds;
  uint32_t tile_size;
  uint32_t vector_encoding;
  uint32_t raster_encoding;
} mln_style_source_info;
typedef struct mln_style_tile_source_options {
  uint32_t size;
  uint32_t fields;
  double min_zoom;
  double max_zoom;
  mln_buffer_view attribution;
  uint32_t scheme;
  mln_lat_lng_bounds bounds;
  uint32_t tile_size;
  uint32_t vector_encoding;
  uint32_t raster_encoding;
} mln_style_tile_source_options;
typedef struct mln_geojson_source_options {
  uint32_t size;
  uint32_t fields;
  double min_zoom;
  double max_zoom;
  double tolerance;
  double cluster_max_zoom;
  mln_buffer_view cluster_properties;
  uint32_t tile_size;
  uint32_t buffer;
  uint32_t cluster_radius;
  uint32_t cluster_min_points;
  bool line_metrics;
  bool cluster;
  bool synchronous_tiling;
} mln_geojson_source_options;
typedef struct mln_canonical_tile_id {
  uint32_t z;
  uint32_t x;
  uint32_t y;
} mln_canonical_tile_id;
typedef void (*mln_custom_geometry_source_tile_callback)(
  void* user_data, mln_canonical_tile_id tile_id
);
typedef void (*mln_custom_geometry_source_release_callback)(void* user_data);
typedef struct mln_custom_geometry_source_options {
  uint32_t size;
  uint32_t fields;
  mln_custom_geometry_source_tile_callback fetch_tile;
  mln_custom_geometry_source_tile_callback cancel_tile;
  void* user_data;
  double min_zoom;
  double max_zoom;
  double tolerance;
  uint32_t tile_size;
  uint32_t buffer;
  bool clip;
  bool wrap;
  mln_custom_geometry_source_release_callback release_user_data;
} mln_custom_geometry_source_options;
typedef struct mln_premultiplied_rgba8_image {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  uint32_t stride;
  const uint8_t* pixels;
  size_t byte_length;
} mln_premultiplied_rgba8_image;
typedef struct mln_style_image_options {
  uint32_t size;
  uint32_t fields;
  const mln_image_stretch* stretch_x;
  size_t stretch_x_count;
  const mln_image_stretch* stretch_y;
  size_t stretch_y_count;
  mln_image_content content;
  uint32_t text_fit_width;
  uint32_t text_fit_height;
  float pixel_ratio;
  bool sdf;
} mln_style_image_options;
typedef struct mln_style_image_info {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  uint32_t stride;
  size_t byte_length;
  size_t stretch_x_count;
  size_t stretch_y_count;
  mln_image_content content;
  uint32_t text_fit_width;
  uint32_t text_fit_height;
  float pixel_ratio;
  bool sdf;
  bool has_content;
  bool has_text_fit_width;
  bool has_text_fit_height;
} mln_style_image_info;
typedef struct mln_style_transition_options {
  uint32_t size;
  uint32_t fields;
  double duration_ms;
  double delay_ms;
  bool enable_placement_transitions;
} mln_style_transition_options;
MLN_API mln_style_tile_source_options
mln_style_tile_source_options_default(void) MLN_NOEXCEPT;
MLN_API mln_geojson_source_options
mln_geojson_source_options_default(void) MLN_NOEXCEPT;
MLN_API mln_custom_geometry_source_options
mln_custom_geometry_source_options_default(void) MLN_NOEXCEPT;
MLN_API mln_premultiplied_rgba8_image
mln_premultiplied_rgba8_image_default(void) MLN_NOEXCEPT;
MLN_API mln_style_image_options
mln_style_image_options_default(void) MLN_NOEXCEPT;