bindings/dotnet/src/Maplibre.Native/Generated/style.g.cs

using System.Runtime.InteropServices;

namespace Maplibre.Native.Internal.C
{
    [NativeTypeName("uint32_t")]
    internal enum mln_style_source_type : uint
    {
        MLN_STYLE_SOURCE_TYPE_UNKNOWN = 0,
        MLN_STYLE_SOURCE_TYPE_VECTOR = 1,
        MLN_STYLE_SOURCE_TYPE_RASTER = 2,
        MLN_STYLE_SOURCE_TYPE_RASTER_DEM = 3,
        MLN_STYLE_SOURCE_TYPE_GEOJSON = 4,
        MLN_STYLE_SOURCE_TYPE_IMAGE = 5,
        MLN_STYLE_SOURCE_TYPE_VIDEO = 6,
        MLN_STYLE_SOURCE_TYPE_ANNOTATIONS = 7,
        MLN_STYLE_SOURCE_TYPE_CUSTOM_VECTOR = 8,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_style_tile_source_option_field : uint
    {
        MLN_STYLE_TILE_SOURCE_OPTION_MIN_ZOOM = 1U << 0,
        MLN_STYLE_TILE_SOURCE_OPTION_MAX_ZOOM = 1U << 1,
        MLN_STYLE_TILE_SOURCE_OPTION_ATTRIBUTION = 1U << 2,
        MLN_STYLE_TILE_SOURCE_OPTION_SCHEME = 1U << 3,
        MLN_STYLE_TILE_SOURCE_OPTION_BOUNDS = 1U << 4,
        MLN_STYLE_TILE_SOURCE_OPTION_TILE_SIZE = 1U << 5,
        MLN_STYLE_TILE_SOURCE_OPTION_VECTOR_ENCODING = 1U << 6,
        MLN_STYLE_TILE_SOURCE_OPTION_RASTER_ENCODING = 1U << 7,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_style_tile_scheme : uint
    {
        MLN_STYLE_TILE_SCHEME_XYZ = 0,
        MLN_STYLE_TILE_SCHEME_TMS = 1,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_style_vector_tile_encoding : uint
    {
        MLN_STYLE_VECTOR_TILE_ENCODING_MVT = 0,
        MLN_STYLE_VECTOR_TILE_ENCODING_MLT = 1,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_style_raster_dem_encoding : uint
    {
        MLN_STYLE_RASTER_DEM_ENCODING_MAPBOX = 0,
        MLN_STYLE_RASTER_DEM_ENCODING_TERRARIUM = 1,
    }

    internal partial struct mln_image_stretch
    {
        public float from;

        public float to;
    }

    internal partial struct mln_image_content
    {
        public float left;

        public float top;

        public float right;

        public float bottom;
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_style_image_text_fit : uint
    {
        MLN_STYLE_IMAGE_TEXT_FIT_STRETCH_OR_SHRINK = 0,
        MLN_STYLE_IMAGE_TEXT_FIT_STRETCH_ONLY = 1,
        MLN_STYLE_IMAGE_TEXT_FIT_PROPORTIONAL = 2,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_style_layer_visibility : uint
    {
        MLN_STYLE_LAYER_VISIBILITY_VISIBLE = 0,
        MLN_STYLE_LAYER_VISIBILITY_NONE = 1,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_geojson_source_option_field : uint
    {
        MLN_GEOJSON_SOURCE_OPTION_MIN_ZOOM = 1U << 0,
        MLN_GEOJSON_SOURCE_OPTION_MAX_ZOOM = 1U << 1,
        MLN_GEOJSON_SOURCE_OPTION_TOLERANCE = 1U << 2,
        MLN_GEOJSON_SOURCE_OPTION_CLUSTER_MAX_ZOOM = 1U << 3,
        MLN_GEOJSON_SOURCE_OPTION_CLUSTER_PROPERTIES = 1U << 4,
        MLN_GEOJSON_SOURCE_OPTION_TILE_SIZE = 1U << 5,
        MLN_GEOJSON_SOURCE_OPTION_BUFFER = 1U << 6,
        MLN_GEOJSON_SOURCE_OPTION_CLUSTER_RADIUS = 1U << 7,
        MLN_GEOJSON_SOURCE_OPTION_CLUSTER_MIN_POINTS = 1U << 8,
        MLN_GEOJSON_SOURCE_OPTION_LINE_METRICS = 1U << 9,
        MLN_GEOJSON_SOURCE_OPTION_CLUSTER = 1U << 10,
        MLN_GEOJSON_SOURCE_OPTION_SYNCHRONOUS_UPDATE = 1U << 11,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_custom_geometry_source_option_field : uint
    {
        MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_MIN_ZOOM = 1U << 0,
        MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_MAX_ZOOM = 1U << 1,
        MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_TOLERANCE = 1U << 2,
        MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_TILE_SIZE = 1U << 3,
        MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_BUFFER = 1U << 4,
        MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_CLIP = 1U << 5,
        MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_WRAP = 1U << 6,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_style_image_option_field : uint
    {
        MLN_STYLE_IMAGE_OPTION_PIXEL_RATIO = 1U << 0,
        MLN_STYLE_IMAGE_OPTION_SDF = 1U << 1,
        MLN_STYLE_IMAGE_OPTION_STRETCH_X = 1U << 2,
        MLN_STYLE_IMAGE_OPTION_STRETCH_Y = 1U << 3,
        MLN_STYLE_IMAGE_OPTION_CONTENT = 1U << 4,
        MLN_STYLE_IMAGE_OPTION_TEXT_FIT_WIDTH = 1U << 5,
        MLN_STYLE_IMAGE_OPTION_TEXT_FIT_HEIGHT = 1U << 6,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_style_transition_option_field : uint
    {
        MLN_STYLE_TRANSITION_OPTION_DURATION = 1U << 0,
        MLN_STYLE_TRANSITION_OPTION_DELAY = 1U << 1,
        MLN_STYLE_TRANSITION_OPTION_ENABLE_PLACEMENT_TRANSITIONS = 1U << 2,
    }

    [NativeTypeName("uint32_t")]
    internal enum mln_location_indicator_image_kind : uint
    {
        MLN_LOCATION_INDICATOR_IMAGE_KIND_TOP = 0,
        MLN_LOCATION_INDICATOR_IMAGE_KIND_BEARING = 1,
        MLN_LOCATION_INDICATOR_IMAGE_KIND_SHADOW = 2,
    }

    internal partial struct mln_style_source_info
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint type;

        [NativeTypeName("size_t")]
        public nuint id_size;

        [NativeTypeName("bool")]
        public byte is_volatile;

        [NativeTypeName("bool")]
        public byte has_attribution;

        [NativeTypeName("size_t")]
        public nuint attribution_size;
    }

    internal partial struct mln_style_tile_source_options
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint fields;

        public double min_zoom;

        public double max_zoom;

        public mln_string_view attribution;

        [NativeTypeName("uint32_t")]
        public uint scheme;

        public mln_lat_lng_bounds bounds;

        [NativeTypeName("uint32_t")]
        public uint tile_size;

        [NativeTypeName("uint32_t")]
        public uint vector_encoding;

        [NativeTypeName("uint32_t")]
        public uint raster_encoding;
    }

    internal unsafe partial struct mln_geojson_source_options
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint fields;

        public double min_zoom;

        public double max_zoom;

        public double tolerance;

        public double cluster_max_zoom;

        [NativeTypeName("const mln_json_value *")]
        public mln_json_value* cluster_properties;

        [NativeTypeName("uint32_t")]
        public uint tile_size;

        [NativeTypeName("uint32_t")]
        public uint buffer;

        [NativeTypeName("uint32_t")]
        public uint cluster_radius;

        [NativeTypeName("uint32_t")]
        public uint cluster_min_points;

        [NativeTypeName("bool")]
        public byte line_metrics;

        [NativeTypeName("bool")]
        public byte cluster;

        [NativeTypeName("bool")]
        public byte synchronous_update;
    }

    internal partial struct mln_canonical_tile_id
    {
        [NativeTypeName("uint32_t")]
        public uint z;

        [NativeTypeName("uint32_t")]
        public uint x;

        [NativeTypeName("uint32_t")]
        public uint y;
    }

    internal unsafe partial struct mln_custom_geometry_source_options
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint fields;

        [NativeTypeName("mln_custom_geometry_source_tile_callback")]
        public delegate* unmanaged[Cdecl]<void*, mln_canonical_tile_id, void> fetch_tile;

        [NativeTypeName("mln_custom_geometry_source_tile_callback")]
        public delegate* unmanaged[Cdecl]<void*, mln_canonical_tile_id, void> cancel_tile;

        public void* user_data;

        public double min_zoom;

        public double max_zoom;

        public double tolerance;

        [NativeTypeName("uint32_t")]
        public uint tile_size;

        [NativeTypeName("uint32_t")]
        public uint buffer;

        [NativeTypeName("bool")]
        public byte clip;

        [NativeTypeName("bool")]
        public byte wrap;
    }

    internal unsafe partial struct mln_premultiplied_rgba8_image
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint width;

        [NativeTypeName("uint32_t")]
        public uint height;

        [NativeTypeName("uint32_t")]
        public uint stride;

        [NativeTypeName("const uint8_t *")]
        public byte* pixels;

        [NativeTypeName("size_t")]
        public nuint byte_length;
    }

    internal unsafe partial struct mln_style_image_options
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint fields;

        [NativeTypeName("const mln_image_stretch *")]
        public mln_image_stretch* stretch_x;

        [NativeTypeName("size_t")]
        public nuint stretch_x_count;

        [NativeTypeName("const mln_image_stretch *")]
        public mln_image_stretch* stretch_y;

        [NativeTypeName("size_t")]
        public nuint stretch_y_count;

        public mln_image_content content;

        [NativeTypeName("uint32_t")]
        public uint text_fit_width;

        [NativeTypeName("uint32_t")]
        public uint text_fit_height;

        public float pixel_ratio;

        [NativeTypeName("bool")]
        public byte sdf;
    }

    internal partial struct mln_style_image_info
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint width;

        [NativeTypeName("uint32_t")]
        public uint height;

        [NativeTypeName("uint32_t")]
        public uint stride;

        [NativeTypeName("size_t")]
        public nuint byte_length;

        [NativeTypeName("size_t")]
        public nuint stretch_x_count;

        [NativeTypeName("size_t")]
        public nuint stretch_y_count;

        public mln_image_content content;

        [NativeTypeName("uint32_t")]
        public uint text_fit_width;

        [NativeTypeName("uint32_t")]
        public uint text_fit_height;

        public float pixel_ratio;

        [NativeTypeName("bool")]
        public byte sdf;

        [NativeTypeName("bool")]
        public byte has_content;

        [NativeTypeName("bool")]
        public byte has_text_fit_width;

        [NativeTypeName("bool")]
        public byte has_text_fit_height;
    }

    internal partial struct mln_style_transition_options
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint fields;

        public double duration_ms;

        public double delay_ms;

        [NativeTypeName("bool")]
        public byte enable_placement_transitions;
    }

    internal static unsafe partial class NativeMethods
    {
        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_style_tile_source_options mln_style_tile_source_options_default();

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_geojson_source_options mln_geojson_source_options_default();

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_custom_geometry_source_options mln_custom_geometry_source_options_default();

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_premultiplied_rgba8_image mln_premultiplied_rgba8_image_default();

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_style_image_options mln_style_image_options_default();
